1997-06-09  Miles Bader  <miles@gnu.ai.mit.edu>

	* Makefile (LCLHDRS): Add mach-exec.h.

Thu May  1 18:40:53 1997  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>

	* bootstrap.c (cthread_stack_size): Don't set special value here;
	use the default.

Wed Apr 30 12:01:53 1997  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>

	* default_pager.c (default_pager_default_thread): Now that this is
 	forked, rather than run directly by the first thread, we have to
 	gain kernel privileges to acquire reserved pages.

Fri Apr 18 16:44:49 1997  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>

	* wiring.c (__vm_allocate): New function.

Wed Apr 16 14:18:28 1997  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>

	* default_pager.c (debug): Turn off.

Mon Apr 14 12:50:20 1997  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>

	* default_pager.c: Remove debugging printfs.

Thu Apr 10 15:10:25 1997  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>

	* Makefile (installationdir): Set variable.

Wed Apr  9 13:57:44 1997  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>

	* default_pager.c (default_pager_default_thread): New function.
	Delete old variable with this name, it was never used.
	(default_pager): Fork default_pager_default_thread instead of
	doing it here to avoid the possibility that we are on a tiny
	stack.  Current thread dies.

Thu Apr  3 20:00:58 1997  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>

	* elf-load.c (exec_load): Include <elf.h> instead of
	<mach/exec/elf.h>.  Include "mach-exec.h" instead of
	<mach/exec/elf.h>. 
	(exec_load) [i386]: Check for i386 types directly; abandon old
	MY_EI_DATA and MY_E_MACHINE.
	* load.c: Include "mach-exec.h" instead of <mach/exec/elf.h>.
	* exec.c: Likewise.
	* mach-exec.h: New file.

Wed Mar 19 14:45:27 1997  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>

	* panic.c (panic): Clear possible errors on stdout before printing
	panic string.

Mon Mar 17 13:13:50 1997  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>
